<resources>
    <string name="app_name">ChattingApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    !--toolbarMenu-->
    <string name="menu_toolbar_character">캐릭터 선택</string>

    <!--BottomMenu-->
    <string name="home">Home</string>
    <string name="forum">Forum</string>
    <string name="chat">Chat</string>
    <string name="info">Info</string>
    <string name="setting">Setting</string>

    <!--Toolbar-->
    <string name="title_home">홈</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_chatting">채팅</string>
    <string name="title_info">게임 정보</string>
    <string name="title_more">더 보기</string>

    <string name="login">로그인</string>

    <string name="confirm">확인</string>
    <string name="yes">네</string>
    <string name="no">아니오</string>

    <!--ChattingFragment-->
    <string name="friend">친구</string>
    <string name="message">메시지</string>
</resources>
