<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/home_fragment"
            android:icon="@drawable/selector_bottom_nav_home"
            android:title="@string/home"/>

    <item
            android:id="@+id/forum_fragment"
            android:icon="@drawable/selector_bottom_nav_forum"
            android:title="@string/forum"/>

    <item
            android:id="@+id/chat_fragment"
            android:icon="@drawable/selector_bottom_nav_chat"
            android:title="@string/chat"/>

    <item
            android:id="@+id/info_fragment"
            android:icon="@drawable/selector_bottom_nav_info"
            android:title="@string/info"/>

    <item
            android:id="@+id/setting_fragment"
            android:icon="@drawable/selector_bottom_nav_setting"
            android:title="@string/setting"/>


</menu>
