<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:startDestination="@+id/home_fragment">

    <fragment android:id="@+id/home_fragment"
              android:name="com.ejiaah.chattingapp.HomeFragment"
              android:label="@string/home"
              tools:layout="@layout/fragment_home"/>

    <fragment android:id="@+id/forum_fragment"
              android:name="com.ejiaah.chattingapp.ForumFragment"
              android:label="@string/forum"
              tools:layout="@layout/fragment_forum"/>

    <fragment android:id="@+id/setting_fragment"
              android:name="com.ejiaah.chattingapp.SettingFragment"
              android:label="@string/setting"
              tools:layout="@layout/fragment_setting"/>

    <fragment android:id="@+id/info_fragment"
              android:name="com.ejiaah.chattingapp.InfoFragment"
              android:label="@string/info"
              tools:layout="@layout/fragment_info"/>

    <fragment android:id="@+id/chat_fragment"
              android:name="com.ejiaah.chattingapp.ChatFragment"
              android:label="@string/chat"
              tools:layout="@layout/fragment_chat"/>
</navigation>